--- a/index.html
+++ b/index.html
@@ -47,13 +47,15 @@
 			</div>
 		    <div class="col-md-4">
 		    	<div class="panel panel-default">
-		    		<div class="panel-heading">
-		    			<h3 class="panel-title">Connect With Me</h3>
-		    		</div>
-		    		<div class="panel-body">
-						<a href="https://www.github.com"><img src="assets/images/github.png" alt="Github" height="100" width="100"></a>
-						<a href="https://www.linkedin.com"><img src="assets/images/linkedin.png" alt="LinkedIn" height="100" width="100"></a>
-						<a href="https://www.stackoverflow.com"><img src="assets/images/stackoverflow.png" alt="Stackoverflow" height="100" width="100"></a>
+		    		<div class="ConnectMe">
+			    		<div class="panel-heading">
+			    			<h3 class="panel-title">Connect With Me</h3>
+			    		</div>
+			    		<div class="panel-body">
+							<a href="https://www.github.com"><img src="assets/images/github.png" alt="Github" height="100" width="100"></a>
+							<a href="https://www.linkedin.com"><img src="assets/images/linkedin.png" alt="LinkedIn" height="100" width="100"></a>
+							<a href="https://www.stackoverflow.com"><img src="assets/images/stackoverflow.png" alt="Stackoverflow" height="100" width="100"></a>
+		    			</div>
 		    		</div>
 		    	</div>
 		    </div>
@@ -61,8 +63,12 @@
 	</div>
 	<div class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container">
-			<p class="navbar-text pull-left">© Copyright 2017 - Kevin de Bree
-			</p>
+			<p class="navbar-text pull-left">© Copyright 2017 - Kevin de Bree</p>
+	        <ul class="nav navbar-nav navbar-center">
+	          <li><a href="index.html">About</a></li>
+	          <li><a href="portfolio.html">Portfolio</a></li>
+	          <li><a href="contact.html">Contact</a></li>
+	        </ul>
 		</div>
 	</div>
 </body>
